Deploy prod-ref-devops certificate

--- a/ace/environments/ci/kustomization.yaml
+++ b/ace/environments/ci/kustomization.yaml
@@ -58,3 +58,4 @@ resources:
 - triggerbindings/ace-integration-server.yaml
 - triggertemplates/ace-integration-server.yaml
 - certificates/prod-ref-ss-ca.yaml
+- certificates/prod-ref-devops.yaml
