--- a/ace/environments/ci/kustomization.yaml
+++ b/ace/environments/ci/kustomization.yaml
@@ -59,3 +59,4 @@ resources:
 - triggertemplates/ace-integration-server.yaml
 - certificates/prod-ref-ss-ca.yaml
 - certificates/prod-ref-devops.yaml
+- secrets/gitops-webhook-token.yaml
